--- a/kondisi_31.rdlc
+++ b/kondisi_31.rdlc
@@ -1467,10 +1467,22 @@
                   <Paragraph>
                     <TextRuns>
                       <TextRun>
-                        <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value), 
-"January", "February", "March", "April", "May", "June", 
-"July", "August", "September", "October", "November", "December") 
-&amp; " " &amp; Parameters!tahun.Value</Value>
+                        <Value>=IIF(
+    Month(CDate(Parameters!tanggalMulai.Value)) = Month(CDate(Parameters!tanggalAkhir.Value)) 
+    AND 
+    Year(CDate(Parameters!tanggalMulai.Value)) = Year(CDate(Parameters!tanggalAkhir.Value)),
+    
+    "Month : " &amp; 
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalMulai.Value)),
+
+    "Month : " &amp;
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp; 
+    Year(CDate(Parameters!tanggalMulai.Value)) &amp;
+    " - " &amp;
+    MonthName(Month(CDate(Parameters!tanggalAkhir.Value))) &amp; " " &amp; 
+    Year(CDate(Parameters!tanggalAkhir.Value))
+)</Value>
                         <Style>
                           <FontFamily>Arial Narrow</FontFamily>
                           <FontSize>6pt</FontSize>
@@ -29178,7 +29190,7 @@ Val(ReportItems!Textbox279.Value)</Value>
                   </TablixCells>
                 </TablixRow>
                 <TablixRow>
-                  <Height>0.53763cm</Height>
+                  <Height>0.45513cm</Height>
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
@@ -30424,7 +30436,7 @@ Val(ReportItems!Textbox279.Value)</Value>
             <DataSetName>datasetkondisistokrepair</DataSetName>
             <Top>13.84037cm</Top>
             <Left>2.56559cm</Left>
-            <Height>0.99276cm</Height>
+            <Height>0.91026cm</Height>
             <Width>26.77909cm</Width>
             <ZIndex>8</ZIndex>
             <Style>
@@ -33259,10 +33271,21 @@ Val(ReportItems!Textbox279.Value)</Value>
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>=Choose(CInt(Parameters!bulan.Value), 
-"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-"Juli", "Agustus", "September", "Oktober", "November", "Desember") 
-&amp; " " &amp; Parameters!tahun.Value &amp; ", Page " &amp; Globals!PageNumber</Value>
+                      <Value>= IIF(
+    Month(CDate(Parameters!tanggalMulai.Value)) = Month(CDate(Parameters!tanggalAkhir.Value)) 
+    AND 
+    Year(CDate(Parameters!tanggalMulai.Value)) = Year(CDate(Parameters!tanggalAkhir.Value)),
+
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalMulai.Value)),
+
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalMulai.Value)) &amp;
+    " - " &amp;
+    MonthName(Month(CDate(Parameters!tanggalAkhir.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalAkhir.Value))
+)
+&amp; ", Page " &amp; Globals!PageNumber</Value>
                       <Style>
                         <FontStyle>Italic</FontStyle>
                         <FontFamily>Segoe UI</FontFamily>
@@ -33312,11 +33335,11 @@ Val(ReportItems!Textbox279.Value)</Value>
     </ReportSection>
   </ReportSections>
   <ReportParameters>
-    <ReportParameter Name="bulan">
+    <ReportParameter Name="tanggalMulai">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="tahun">
+    <ReportParameter Name="tanggalAkhir">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
@@ -33329,12 +33352,12 @@ Val(ReportItems!Textbox279.Value)</Value>
         <CellDefinition>
           <ColumnIndex>0</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>bulan</ParameterName>
+          <ParameterName>tanggalMulai</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>tahun</ParameterName>
+          <ParameterName>tanggalAkhir</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
