--- a/Rb_Stokhari.rdlc
+++ b/Rb_Stokhari.rdlc
@@ -4051,10 +4051,22 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>="MONTH :" &amp; Choose(CInt(Parameters!bulan.Value), 
-"JANUARY", "FEBRUARY", "MARCH", "APRIL", "MAY", "JUNE", 
-"JULY", "AUGUST", "SEPTEMBER", "OCTOBER", "NOVEMBER", "DECEMBER") 
-&amp; " " &amp; Parameters!tahun.Value</Value>
+                      <Value>=IIF(
+    Month(CDate(Parameters!tanggalMulai.Value)) = Month(CDate(Parameters!tanggalAkhir.Value)) 
+    AND 
+    Year(CDate(Parameters!tanggalMulai.Value)) = Year(CDate(Parameters!tanggalAkhir.Value)),
+    
+    "Month : " &amp; 
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalMulai.Value)),
+
+    "Month : " &amp;
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp; 
+    Year(CDate(Parameters!tanggalMulai.Value)) &amp;
+    " - " &amp;
+    MonthName(Month(CDate(Parameters!tanggalAkhir.Value))) &amp; " " &amp; 
+    Year(CDate(Parameters!tanggalAkhir.Value))
+)</Value>
                       <Style>
                         <FontFamily>Palatino Linotype</FontFamily>
                         <FontWeight>Bold</FontWeight>
@@ -4154,11 +4166,11 @@
     </ReportSection>
   </ReportSections>
   <ReportParameters>
-    <ReportParameter Name="bulan">
+    <ReportParameter Name="tanggalMulai">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="tahun">
+    <ReportParameter Name="tanggalAkhir">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
@@ -4171,12 +4183,12 @@
         <CellDefinition>
           <ColumnIndex>0</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>bulan</ParameterName>
+          <ParameterName>tanggalMulai</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>tahun</ParameterName>
+          <ParameterName>tanggalAkhir</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
