--- a/actual_31.rdlc
+++ b/actual_31.rdlc
@@ -559,10 +559,22 @@
                   <Paragraph>
                     <TextRuns>
                       <TextRun>
-                        <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value), 
-"January", "February", "March", "April", "May", "June", 
-"July", "August", "September", "October", "November", "December") 
-&amp; " " &amp; Parameters!tahun.Value</Value>
+                        <Value>=IIF(
+    Month(CDate(Parameters!tanggalMulai.Value)) = Month(CDate(Parameters!tanggalAkhir.Value)) 
+    AND 
+    Year(CDate(Parameters!tanggalMulai.Value)) = Year(CDate(Parameters!tanggalAkhir.Value)),
+    
+    "Month : " &amp; 
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalMulai.Value)),
+
+    "Month : " &amp;
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp; 
+    Year(CDate(Parameters!tanggalMulai.Value)) &amp;
+    " - " &amp;
+    MonthName(Month(CDate(Parameters!tanggalAkhir.Value))) &amp; " " &amp; 
+    Year(CDate(Parameters!tanggalAkhir.Value))
+)</Value>
                         <Style>
                           <FontSize>6pt</FontSize>
                           <FontWeight>SemiBold</FontWeight>
@@ -10638,10 +10650,21 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>=Choose(CInt(Parameters!bulan.Value), 
-"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-"Juli", "Agustus", "September", "Oktober", "November", "Desember") 
-&amp; " " &amp; Parameters!tahun.Value &amp; ", Page " &amp; Globals!PageNumber</Value>
+                      <Value>= IIF(
+    Month(CDate(Parameters!tanggalMulai.Value)) = Month(CDate(Parameters!tanggalAkhir.Value)) 
+    AND 
+    Year(CDate(Parameters!tanggalMulai.Value)) = Year(CDate(Parameters!tanggalAkhir.Value)),
+
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalMulai.Value)),
+
+    MonthName(Month(CDate(Parameters!tanggalMulai.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalMulai.Value)) &amp;
+    " - " &amp;
+    MonthName(Month(CDate(Parameters!tanggalAkhir.Value))) &amp; " " &amp;
+    Year(CDate(Parameters!tanggalAkhir.Value))
+)
+&amp; ", Page " &amp; Globals!PageNumber</Value>
                       <Style>
                         <FontStyle>Italic</FontStyle>
                         <FontFamily>Segoe UI</FontFamily>
@@ -10691,11 +10714,11 @@
     </ReportSection>
   </ReportSections>
   <ReportParameters>
-    <ReportParameter Name="bulan">
+    <ReportParameter Name="tanggalMulai">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="tahun">
+    <ReportParameter Name="tanggalAkhir">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
@@ -10708,12 +10731,12 @@
         <CellDefinition>
           <ColumnIndex>0</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>bulan</ParameterName>
+          <ParameterName>tanggalMulai</ParameterName>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>0</RowIndex>
-          <ParameterName>tahun</ParameterName>
+          <ParameterName>tanggalAkhir</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
